# kickflip

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile.client  Dockerfile.server  IMPROVEMENTS.md  QUICKSTART.md  README.md  docker-compose.yml  nginx.config.example  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/client/: Cargo.toml
crates/client/src/: config.rs  main.rs  networking.rs  ssh.rs
crates/proto/: Cargo.toml
crates/proto/src/: api.rs  auth.rs  b64.rs  lib.rs  types.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: config.rs  main.rs  ssh.rs  tui.rs
scripts/: docker.sh  install-client.sh  install-server.sh  release.sh
tests/integration/: Dockerfile.test-runner  Dockerfile.test-server  README.md  docker-compose.test.yml  run-tests.sh  test-runner.sh
tests/integration/config/: kickflip-server.toml
tests/integration/coredns/: Corefile
