[package]
name = "kickflip-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
clap = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
home = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = { workspace = true }
kickflip-proto = { path = "../proto" }
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"

[lints]
workspace = true
