[package]
name = "kickflip-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
default-run = "kickflip-server"

[dependencies]
axum = "0.8.4"
clap = { workspace = true }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "io-util"] }
serde = {workspace = true}
serde_json = {workspace = true}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
kickflip-proto = { path = "../proto" }
uuid = { version = "1.10", features = ["v4"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"] }
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = "2"
inquire = { workspace = true }
which = "8"
toml = { workspace = true }
ratatui = "0.29"
crossterm = "0.29"

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.9"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }

[lints]
workspace = true
